# semantic-versioning-example

./: CHANGELOG.md  README.md  __run  pyproject.toml
.github/workflows/: semver.yml
src/example_package/: __init__.py  hello.py
