[tool.poetry]
name = "example-package"
version = "0.2.0"
description = "Example python project"
authors = ["Zackarie Vinckier <zackarie.vinckier--coffinier@eviden.com>"]
license = "The Unlicence"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "example_package.hello:main"

[tool.semantic_release]
commit_subject = "chore(semver): Update version to {version}"
#version_variables = ["src/example_package/__init__.py:__version__"]
version_pattern = [
    'src/example_package/__init__.py:__version__ = "{version}"',
]
version_toml = ["pyproject.toml:tool.poetry.version"]


